test/kube2e/gloo/artifacts/block-labels.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-gloo-to-kube-apiserver
  namespace: gloo-system
spec:
  endpointSelector:
    matchLabels:
      block: this
  egressDeny:
  - toEntities:
    - kube-apiserver
